--- a/index.html
+++ b/index.html
@@ -1,28 +1,152 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+<body>
+  <div class="w-nav left-navigation" data-collapse="all" data-animation="default" data-duration="400" data-no-scroll="1">
+    <a class="w-nav-brand logo-link" href="#"></a>
+    <nav class="w-nav-menu nav-menu" role="navigation"><a class="w-nav-link nav-link" href="#home">Home</a><a class="w-nav-link nav-link" href="#Urban-Portraits">Urban Portraits</a><a class="w-nav-link nav-link" href="#Landscapes-and-Architecture">LAndscapes and architecture</a><a class="w-nav-link nav-link" href="#Contact-Me">Contact ME</a>
+    </nav>
+    <div class="w-nav-button hamburger-button">
+      <div class="w-icon-nav-menu"></div>
+    </div>
+  </div>
+  <div class="content">
+    <div class="banner" id="home">
+      <div class="hero-title-wrapper">
+        <div></div>
+        <h1 class="hero-heading"><span>Dhwani thapar</span></h1>
+        <div class="hero-subheading">photography</div>
+      </div>
+    </div>
+    <aside class="w-section section" id="Urban-Portraits">
+      <div class="w-container">
+        <div class="section-title-group">
+          <h2 class="section-heading centered">URban portraits</h2>
+        </div>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Copy of Mn Dr.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/dr Woman.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/26932 - D.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Snakecharmer.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+      </div>
+      <div class="w-container"><img class="image" src="images/street saharanpur.jpg">
+      </div>
+      <div class="w-container">
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_8694.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/boy souvenir shop.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Man at Byblos Market.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Boy  PQ.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+      </div>
+    </aside>
+    <div class="w-section section" id="Landscapes-and-Architecture">
+      <div class="w-container">
+        <div class="section-title-group">
+          <h2 class="section-heading centered">LAndscapes and architecture</h2>
+        </div>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Dhwani (02).jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/duomod.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_9563.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_2783.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+      </div>
+      <div class="w-container"><img class="image" src="images/Beirut.jpg">
+      </div>
+      <div class="w-container">
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/Copy of DSC02569.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_6097.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_4207.JPG">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+        <a class="w-lightbox w-inline-block grid-fours" href="#"><img src="images/IMG_2718  chiaroscuro.jpg">
+          <script type="application/json" class="w-json">
+            { "items": [] }
+          </script>
+        </a>
+      </div>
+    </div>
+    <div class="w-section section section-gray" id="Contact-Me">
+      <div class="w-container">
+        <div class="section-title-group">
+          <h2 class="section-heading centered">Contact Form</h2>
+          <div class="section-subheading center">messages or comments to get in touch</div>
+        </div>
+        <div class="w-form form-wrapper squeezed">
+          <form id="email-form" name="email-form" data-name="Email Form">
+            <div class="w-row">
+              <div class="w-col w-col-6 col-0">
+                <input class="w-input form-field" id="name-7" type="text" placeholder="Name" name="name-7" data-name="Name 7">
+              </div>
+              <div class="w-col w-col-6 col-0">
+                <input class="w-input form-field" id="email-9" type="email" placeholder="Email" name="email-9" data-name="Email 9" required="required">
+              </div>
+            </div>
+            <textarea class="w-input form-field text-area" id="field-4" placeholder="Message" name="field-4" data-name="Field 4"></textarea>
+            <input class="w-button button full-width" type="submit" value="Send Message" data-wait="Please wait...">
+          </form>
+          <div class="w-form-done success-message">
+            <p class="p-form">Thank you! Your submission has been received!</p>
+          </div>
+          <div class="w-form-fail success-message">
+            <p class="p-form">Oops! Something went wrong while submitting the form :(</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="w-section footer center">
+      <div class="w-container"></div>
+    </footer>
+  </div>
+</body>
