--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ a[b].attributes["data-load"])+""&&ImageLoader.load(a[b])}};window.ImageLoader=Im
       <div class="sqs-slice" data-slice-area-id="landing-full-center-01-3" data-slice-type="heading" data-slice-id="55a72442e4b0f971708b94e7" data-content-empty="true"></div>
       <div class="sqs-slice" data-slice-area-id="landing-full-center-01-4" data-slice-type="body" data-slice-id="55a72442e4b06fec1c6c5d3c" data-content-empty="true"></div>
       <div class="responsive-wrapper actions" style="display: inline-block;">
-        <div class="sqs-slice yui3-widget sqs-slice-navigation sqs-slice-navigation-content" data-slice-area-id="landing-full-center-01-5" data-slice-type="navigation" data-compound-type="action" data-slice-id="55a725b7e4b02664c24cbca0" id="yui_3_17_2_1_1437065257296_370"><ul><li><a href="/portfolio-index">Portfolio</a></li><li><a href="/about">Projects</a></li><li><a href="/contact">Bio</a></li></ul></div><div class="sqs-slice" data-slice-area-id="landing-full-center-01-6" data-slice-type="custom-form" data-content-empty="true"></div>
+        <div class="sqs-slice yui3-widget sqs-slice-navigation sqs-slice-navigation-content" data-slice-area-id="landing-full-center-01-5" data-slice-type="navigation" data-compound-type="action" data-slice-id="55a725b7e4b02664c24cbca0" id="yui_3_17_2_1_1437065257296_370"><ul><li><a href="dthapar.github.io/Portfolio Index">Portfolio</a></li><li><a href="/about">Projects</a></li><li><a href="/contact">Bio</a></li></ul></div><div class="sqs-slice" data-slice-area-id="landing-full-center-01-6" data-slice-type="custom-form" data-content-empty="true"></div>
       </div>
     </div>
 
