update one portrait

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@ layout: default
 images:
 - Portraits_1
 - Portraits_2
-- Portraits_13
+- Portraits_13-1
 - Portraits_3
 - Portraits_4
 - Portraits_5
