Added projects page and updated bio

--- a/projects.html
+++ b/projects.html
@@ -9,14 +9,8 @@ layout: default
 
       <div class="cover-container">
         <div class="inner cover">
-          <h1 class="cover-heading">Hi, I'm Dhwani</h1>
-          <p class="lead">I'm interested in creatively shaping great teams and inspiring products while using data to drive decisions, and emotional intelligence to drive motivation.
-<br>
-<br>
-I easily adapt to new environments, a result of wearing multiple hats through management consulting work and extensive global experience.
-<br>
-<br>
-Here is a smattering of my creative work, projects, and reflections.
+          <h1 class="cover-heading">To be added soon!</h1>
+          <p class="lead"> Please check back later.
 </p>
           <p class="lead">
             <a href="/">Home</a>
