--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
             <p class="lead"><!-- tagline --></p>
             <p class="lead">
             <a href="/portfolio">Portfolio</a>
-              <a href="#">Projects</a>
+              <a href="/projects">Projects</a>
               <a href="/bio">Bio</a>
             </p>
           </div>
