--- a/projects.html
+++ b/projects.html
@@ -13,10 +13,10 @@ layout: default
           <p class="lead"> Please check back later.
 </p>
           <p class="lead">
-            <a href="/">Home</a>
+            <a href="/index">Home</a>
             <a href="/portfolio">Portfolio</a>
-            <a href="#">Projects</a>
-            <a href="#">Bio</a>
+            <a href="/projects">Projects</a>
+            <a href="/bio">Bio</a>
           </p>
         </div>
 
