changed landing page text

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ layout: default
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Dhwani Thapar</h1>
+            <h1 class="cover-heading"><b>Dhwani Thapar</b></h1>
             <p class="lead"><!-- tagline --></p>
             <p class="lead">
-            <a href="/portfolio">Portfolio</a>
+            <a href="/photography">Photography</a>
               <a href="/projects">Projects</a>
               <a href="/bio">Bio</a>
             </p>
