--- a/photography.html
+++ b/photography.html
@@ -25,7 +25,7 @@ layout: default
 <br>
 <br>
             <a href="/index">Home</a>
-            <a href="/portfolio">Portfolio</a>
+            <a href="/photography">Photography</a>
             <a href="/projects">Projects</a>
             <a href="/bio">Bio</a>
           </p>
