--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@ layout: default
 </p>
           <p class="lead">
             <a href="/index">Home</a>
-            <a href="/portfolio">Portfolio</a>
+            <a href="/photography">Photography</a>
             <a href="/projects">Projects</a>
             <a href="/bio">Bio</a>
           </p>
